refactor: refactor format

--- a/Sentiment_Analysis.ipynb
+++ b/Sentiment_Analysis.ipynb
@@ -898,7 +898,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 299,
+   "execution_count": 3,
    "id": "fbf8fd63-4ed5-4cdb-8755-db3ccd434d85",
    "metadata": {},
    "outputs": [
@@ -933,64 +933,64 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Taichung City</td>\n",
-       "      <td>台中市</td>\n",
+       "      <th>42</th>\n",
+       "      <td>Taipei City</td>\n",
+       "      <td>台北市</td>\n",
        "      <td>2009</td>\n",
        "      <td>1</td>\n",
        "      <td>2009Q1</td>\n",
-       "      <td>9.622155</td>\n",
+       "      <td>32.481564</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Taichung City</td>\n",
-       "      <td>台中市</td>\n",
+       "      <th>43</th>\n",
+       "      <td>Taipei City</td>\n",
+       "      <td>台北市</td>\n",
        "      <td>2009</td>\n",
        "      <td>2</td>\n",
        "      <td>2009Q2</td>\n",
-       "      <td>10.453284</td>\n",
+       "      <td>35.093028</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Taichung City</td>\n",
-       "      <td>台中市</td>\n",
+       "      <th>44</th>\n",
+       "      <td>Taipei City</td>\n",
+       "      <td>台北市</td>\n",
        "      <td>2009</td>\n",
        "      <td>3</td>\n",
        "      <td>2009Q3</td>\n",
-       "      <td>11.200537</td>\n",
+       "      <td>37.525004</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Taichung City</td>\n",
-       "      <td>台中市</td>\n",
+       "      <th>45</th>\n",
+       "      <td>Taipei City</td>\n",
+       "      <td>台北市</td>\n",
        "      <td>2009</td>\n",
        "      <td>4</td>\n",
        "      <td>2009Q4</td>\n",
-       "      <td>11.645966</td>\n",
+       "      <td>39.836662</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Taichung City</td>\n",
-       "      <td>台中市</td>\n",
+       "      <th>46</th>\n",
+       "      <td>Taipei City</td>\n",
+       "      <td>台北市</td>\n",
        "      <td>2010</td>\n",
        "      <td>1</td>\n",
        "      <td>2010Q1</td>\n",
-       "      <td>11.987186</td>\n",
+       "      <td>41.379083</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "      county_eng county  year  quarter      yq  sinyi_price\n",
-       "0  Taichung City    台中市  2009        1  2009Q1     9.622155\n",
-       "1  Taichung City    台中市  2009        2  2009Q2    10.453284\n",
-       "2  Taichung City    台中市  2009        3  2009Q3    11.200537\n",
-       "3  Taichung City    台中市  2009        4  2009Q4    11.645966\n",
-       "4  Taichung City    台中市  2010        1  2010Q1    11.987186"
+       "     county_eng county  year  quarter      yq  sinyi_price\n",
+       "42  Taipei City    台北市  2009        1  2009Q1    32.481564\n",
+       "43  Taipei City    台北市  2009        2  2009Q2    35.093028\n",
+       "44  Taipei City    台北市  2009        3  2009Q3    37.525004\n",
+       "45  Taipei City    台北市  2009        4  2009Q4    39.836662\n",
+       "46  Taipei City    台北市  2010        1  2010Q1    41.379083"
       ]
      },
-     "execution_count": 299,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1012,7 +1012,8 @@
     "# merge price and sentiment ratio\n",
     "t1 = pd.merge(t1, taipei_price, on = 'yq', how='left')\n",
     "\n",
-    "# Because the number of posts in '2007Q4', '2008Q1', '2008Q2' is lower than 500, which could affects their representive. I'd like to draw them with dash line.  \n",
+    "## Because the number of posts in '2007Q4', '2008Q1', '2008Q2' is lower than 500, which could affects their representive. \n",
+    "## I'd like to draw them with dash line.  \n",
     "t1['sentiment_dash'] = np.where(t1['yq'].isin(['2007Q4', '2008Q1', '2008Q2', '2008Q3']), t1['sentiment'], np.nan )\n",
     "t1['sentiment_not_dash'] = np.where(t1['yq'].isin(['2007Q4', '2008Q1', '2008Q2']),np.nan, t1['sentiment'] )"
    ]
@@ -1069,6 +1070,8 @@
     "        \n",
     "# Add title\n",
     "plt.title(\"Sentiment v.s. House Price in Taipei\")\n",
+    "\n",
+    "# set layout for savefig\n",
     "plt.tight_layout()"
    ]
   },
